--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "default-passive-events": "^1.0.10",
     "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
     "file-saver": "^2.0.2",
+    "qs": "^6.9.3",
+    "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
